Get Json from AccuWeather
Get json from accuweather if it not exist at /resources